feat(v1.11): tooling infrastructure & tech-debt sweep
Milestone v1.11 closure. See PR #122 for full phase breakdown (80–87), audit scoreboard, and verification numbers.