@@ -1,176 +1,165 @@
 # Technology Stack
 
-**Analysis Date:** 2026-04-04
+**Analysis Date:** 2026-05-18
 
 ## Languages
 
 **Primary:**
-- Java 25 (Eclipse Temurin) - All application code (`src/main/java/org/ctc/`)
+- Java 25 (Eclipse Temurin) - Application logic, Spring Boot services, controllers, repositories, Flyway migrations
 
 **Secondary:**
-- SQL - Flyway migrations (`src/main/resources/db/migration/`)
-- HTML/CSS - Thymeleaf templates (`src/main/resources/templates/`)
+- SQL - MariaDB/H2 schema migrations via Flyway
+- HTML/Thymeleaf - Server-side template rendering for admin UI
 
 ## Runtime
 
 **Environment:**
-- Java 25 (Eclipse Temurin JDK for build, JRE for runtime)
-- Spring Boot 4.0.5
+- Java 25 (Eclipse Temurin)
+- Spring Boot 4.0.6 (`pom.xml` parent version)
 
 **Package Manager:**
-- Apache Maven 3.9.14 via Maven Wrapper (`./mvnw`)
-- Wrapper config: `.mvn/wrapper/maven-wrapper.properties`
-- Lockfile: Not applicable (Maven uses `pom.xml` with explicit versions)
+- Maven 3.x (via `./mvnw` wrapper)
+- Lockfile: Yes (`pom.xml` enforces versions; no external lock mechanism)
 
 ## Frameworks
 
 **Core:**
-- Spring Boot 4.0.5 - Application framework (`pom.xml` parent)
-- Spring MVC (WebMVC starter) - HTTP request handling, server-rendered HTML
-- Spring Data JPA - Repository layer, Hibernate ORM
-- Spring Security - Authentication (prod/docker profiles only)
-- Spring Boot Actuator - Health endpoint (`/actuator/health`)
-- Thymeleaf - Server-side HTML template rendering
-- Flyway (with `flyway-mysql` dialect) - Database schema migration
-- Lombok - Boilerplate reduction (@Getter, @Setter, @RequiredArgsConstructor, @Slf4j)
+- Spring Boot 4.0.6 - Web framework, dependency injection, auto-configuration
+- Spring Data JPA - ORM abstraction, repository pattern
+- Spring Security - Authentication/authorization (profile-restricted to `prod`/`docker`)
+- Spring Boot Actuator - Health endpoints, metrics
+
+**Server-Side Rendering:**
+- Thymeleaf 3.1.5.RELEASE - Server-side template rendering (no separate frontend build)
 
 **Testing:**
-- JUnit 5 - Test framework (via Spring Boot test starters)
-- Mockito - Mocking framework (core + JUnit Jupiter extension, with `-javaagent` for Surefire/Failsafe)
-- Playwright 1.58.0 - E2E browser tests and graphic generation
-- JaCoCo 0.8.13 - Code coverage (82% line coverage minimum enforced at BUNDLE level)
-- Spring Boot Test starters - `data-jpa-test`, `flyway-test`, `thymeleaf-test`, `validation-test`, `webmvc-test`, `security-test`
+- JUnit 5 - Test framework
+- Mockito 5.x - Mocking framework
+- Spring Boot Test - TestContext framework, `@SpringBootTest`, `@DataJpaTest`
+- Testcontainers 2.0.5 - Live MariaDB in integration tests (MariaDB:11)
+- Playwright 1.59.0 - E2E tests, Team Card graphics generation (runtime dependency)
 
 **Build/Dev:**
-- Maven Compiler Plugin - Java 25 compilation with Lombok annotation processing
-- Maven Surefire Plugin - Unit + integration tests (excludes `**/e2e/**`)
-- Maven Failsafe Plugin - E2E tests (activated via `-Pe2e` profile, includes `**/e2e/**`)
-- Maven Versions Plugin - Version management for releases
-- JaCoCo 0.8.13 - Coverage reporting and enforcement
-- Spring Boot Maven Plugin - Fat JAR packaging (excludes Lombok)
+- Maven Surefire 3.x - Unit/integration test runner (tag-based routing via `@Tag`)
+- Maven Failsafe 3.x - Integration test runner (tag-based routing via `@Tag`)
+- JaCoCo 0.8.14 - Code coverage measurement + enforcement (82% minimum line coverage)
+- SpotBugs 4.9.8.3 + find-sec-bugs 1.14.0 - Static bytecode analysis (Medium+HIGH blocking gate)
+- OpenRewrite 6.39.0 (`-Prewrite` profile) - Recipe-driven code refactoring (dry-run and apply modes)
+- Lombok 1.18.46 - Code generation (annotations, constructors, getters, setters)
 
 ## Key Dependencies
 
 **Critical:**
-- `spring-boot-starter-data-jpa` - JPA/Hibernate persistence layer
-- `spring-boot-starter-thymeleaf` - Server-side rendering engine
-- `spring-boot-starter-webmvc` - HTTP handling (POST-Redirect-GET pattern)
-- `spring-boot-starter-validation` - Bean validation (`@Valid`, `BindingResult`)
-- `spring-boot-starter-security` - Auth for prod/docker profiles
-- `spring-boot-starter-flyway` - Schema migration management
-- `com.microsoft.playwright:playwright:1.58.0` - Browser automation (compile scope: runtime image generation + E2E tests)
+- `spring-boot-starter-data-jpa` - Hibernate ORM with JPA
+- `spring-boot-starter-thymeleaf` - Template engine
+- `spring-boot-starter-webmvc` - Web framework
+- `spring-boot-starter-security` - Authentication/authorization
+- `spring-boot-starter-validation` - Bean validation (Jakarta)
+- `spring-boot-starter-flyway` - Database migration management
 
-**Infrastructure:**
-- `org.mariadb.jdbc:mariadb-java-client` (runtime) - Production database driver
-- `com.h2database:h2` (runtime) - Dev/test in-memory database
-- `org.flywaydb:flyway-mysql` - MariaDB/H2 migration dialect support
-- `org.projectlombok:lombok` (optional) - Compile-time annotation processing
+**Database Drivers:**
+- `mariadb-java-client` - MariaDB JDBC driver (prod/local/docker)
+- `h2` - H2 in-memory database (dev/test profiles)
 
-**External API:**
-- `com.google.api-client:google-api-client:2.9.0` - Google API base client
-- `com.google.apis:google-api-services-sheets:v4-rev20250106-2.0.0` - Google Sheets read access
-- `com.google.apis:google-api-services-calendar:v3-rev20250115-2.0.0` - Google Calendar event management
-- `com.google.auth:google-auth-library-oauth2-http:1.43.0` - Google service account auth
+**External APIs & Services:**
+- `google-api-client` 2.9.0 - Google API client library
+- `google-api-services-sheets` v4-rev20250106-2.0.0 - Google Sheets API v4
+- `google-api-services-calendar` v3-rev20250115-2.0.0 - Google Calendar API v3
+- `google-auth-library-oauth2-http` 1.46.0 - OAuth2 authentication for Google APIs
+- `guava` 33.4.8-jre - Google utilities (overridden to suppress Java 25 Unsafe deprecation warnings)
+- `jsoup` 1.22.2 - HTML parser for GT7 web scraping
+- `commons-text` 1.15.0 - Fuzzy string matching utilities
 
-**Utility:**
-- `org.apache.commons:commons-text:1.15.0` - Fuzzy string matching (driver name matching during import)
-- `org.jsoup:jsoup:1.22.1` - HTML parsing for GT7 web scraping
+**Playwright:**
+- `playwright` 1.59.0 (compile scope) - Browser automation for Team Card PNG generation + E2E tests
 
-## Database
+**JSON Serialization:**
+- `jackson-datatype-jsr310` - Jackson Java-Time module (Instant/LocalDateTime serialization in backup exports)
 
-**Production:**
-- MariaDB (profiles: `prod`, `docker`, `local`)
-- Connection via `org.mariadb.jdbc.Driver`
-- Env vars: `DATABASE_URL`, `DATABASE_USERNAME`, `DATABASE_PASSWORD` (prod profile)
-- Docker network host: `db:3306` (docker profile)
-- Local: `localhost:3306` (local profile)
+**Code Generation (Annotation Processing):**
+- `spotbugs-annotations` 4.9.8 - SpotBugs suppression annotations (provided scope, compile-only)
 
-**Development/Test:**
-- H2 in-memory (`jdbc:h2:mem:ctcdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE`, profile: `dev`)
-- H2 console enabled at `/h2-console` in dev
-- Username: `sa`, no password
-
-**Migrations:**
-- Flyway with `classpath:db/migration` location
-- Current migrations: `V1__initial_schema.sql` (frozen since v1.0.0), `V2__add_fk_indexes.sql`
-- JPA `ddl-auto: validate` on all profiles (Flyway manages schema exclusively)
-- Constraint: H2 + MariaDB compatibility required in all migration files
-- Rule: Never modify existing migration files; always create new `V{N}__{description}.sql`
-
-**OSIV:**
-- `spring.jpa.open-in-view: true` - Deliberately enabled for Thymeleaf lazy loading
-- OSIV warning suppressed in logging config
+**Testing Utilities:**
+- `testcontainers` 2.0.5 - Docker-based live MariaDB for integration tests
+- `testcontainers-junit-jupiter` 2.0.5 - JUnit 5 integration
+- `testcontainers-mariadb` 2.0.5 - MariaDB container image and health checks
+- `mockito-core`, `mockito-junit-jupiter` - Mocking framework
 
 ## Configuration
 
-**Environment:**
-- Profile-based: `application-{dev,local,docker,prod}.yml`
-- Base config: `src/main/resources/application.yml`
-- Dev: port 9090, H2, debug logging, H2 console, no cache
-- Local: port 9091, MariaDB localhost
-- Docker: port 8080, MariaDB `db:3306`, actuator health details
-- Prod: port 8080, MariaDB via env vars
-- File upload limit: 10MB (`spring.servlet.multipart.max-file-size`)
-
-**Key Properties:**
-- `app.upload-dir` - File upload directory (default: `data/dev/uploads`)
-- `app.version` - Application version from `pom.xml` (`@project.version@`)
-- `google.sheets.credentials-path` - Google service account JSON (default: `google-credentials.json`)
-- `google.calendar.id` - Google Calendar ID (env var: `GOOGLE_CALENDAR_ID`)
-- `ctc.site.output-dir` - Static site output directory (default: `docs/site`)
+**Environment (Profile-Specific):**
+- `application.yml` - Common baseline (OSIV enabled, Flyway, Actuator)
+- `application-dev.yml` - Development: H2 in-memory, port 9090, debug logging, H2 console at `/h2-console`
+- `application-local.yml` - Local: MariaDB on localhost:3306, port 9091, `rewriteBatchedStatements=true` for batch inserts
+- `application-docker.yml` - Docker Compose: MariaDB at hostname `db`, port 8080, file paths under `/app/`
+- `application-prod.yml` - Production: External MariaDB (environment variables `DATABASE_URL`, `DATABASE_USERNAME`, `DATABASE_PASSWORD`)
 
 **Build:**
-- `pom.xml` - Maven project descriptor (version: 1.2.0-SNAPSHOT)
-- `.mvn/wrapper/maven-wrapper.properties` - Maven wrapper config (3.9.14)
-- `Dockerfile` - Multi-stage build (JDK 25 build, JRE 25 runtime)
+- `pom.xml` - Primary Maven configuration; defines all dependencies, plugins, build lifecycle, profiles
+- `rewrite.yml` - OpenRewrite recipe configuration (activates `org.openrewrite.staticanalysis.CommonStaticAnalysis`)
+- `.mvn/maven.config` - Maven wrapper configuration
+- `lombok.config` - Lombok settings (enables `@SuppressFBWarnings` auto-generation by `addSuppressFBWarnings=true`)
+- `config/spotbugs-exclude.xml` - SpotBugs suppression filter (EI_EXPOSE_REP* on entities/DTOs, class-level exclusions for test-data service)
 
-## Deployment
+**GitHub Actions Workflows:**
+- `.github/workflows/ci.yml` - Build, unit tests, integration tests, E2E tests, JaCoCo coverage report comments
+- `.github/workflows/codeql.yml` - CodeQL SAST (java-kotlin, security-extended), alert gate on HIGH/CRITICAL, weekly cron
+- `.github/workflows/mariadb-migration-smoke.yml` - Testcontainers MariaDB round-trip validation
+- `.github/workflows/deploy-site.yml` - GitHub Pages deployment of static site output
+- `.github/workflows/release.yml` - Semantic versioning, Docker image build and push, GitHub release creation
+
+**Google Integration:**
+- `google-credentials.json` - Service account credentials (file path: `google-credentials.json`, configured via `google.sheets.credentials-path`)
+- Environment variable: `GOOGLE_CALENDAR_ID` - Google Calendar ID for race event scheduling
 
 **Docker:**
-- Multi-stage Dockerfile: `eclipse-temurin:25-jdk` (build) -> `eclipse-temurin:25-jre` (runtime)
-- Non-root user `ctc` for runtime
-- Installs Chromium system dependencies (libnss3, libgbm1, etc.) for Playwright
-- Playwright browser path: `PLAYWRIGHT_BROWSERS_PATH=/app/.playwright`
-- Healthcheck via `/actuator/health`
-- Directories: `/app/uploads`, `/app/ctc-site-output`, `/app/logs`
-- `docker-compose.yml` - Local dev (App + MariaDB)
-- `docker-compose.prod.yml` - Production (external DB, `.env` config)
-
-**Container Registry:**
-- GitHub Container Registry (GHCR): `ghcr.io/{owner}/ctc-manager`
-- Tags: `{version}` + `latest` on each release
-
-**CI/CD (GitHub Actions):**
-- `.github/workflows/ci.yml` - Push/PR to master: Build, unit/integration tests, Playwright E2E, JaCoCo coverage PR comment
-  - Coverage PR comment via `madrapps/jacoco-report@v1.7.2` (min 70% overall, 80% changed files)
-  - Test reports + coverage uploaded as artifacts (7-day retention)
-- `.github/workflows/release.yml` - Push to master: Conventional Commits version bump, GitHub Release with JAR, Docker build+push to GHCR, SNAPSHOT bump
-  - Uses `RELEASE_TOKEN` PAT for branch protection bypass
-  - Skips `[skip ci]` commits (SNAPSHOT bumps)
-- `.github/workflows/deploy-site.yml` - Push `docs/site/**` to master: GitHub Pages deployment
-- Java 25 Temurin with Maven cache on all workflows
-
-**Release Process:**
-- Automated via Conventional Commits (feat = minor, fix/others = patch, BREAKING CHANGE = major)
-- Flow: set release version in pom.xml -> verify build -> commit + tag -> GitHub Release with JAR -> Docker push to GHCR -> bump to next SNAPSHOT
-- Initial release detection: reads version from pom.xml SNAPSHOT if no tags exist
+- `Dockerfile` - Multi-stage build: Maven build on JDK 25, runtime on JRE 25 (pinned to `-noble` Ubuntu variant for Playwright 1.59.0 compatibility)
+- `docker-compose.yml` - Local development: MariaDB:11 service + Spring Boot app service, shared volumes for uploads and site output
 
 ## Platform Requirements
 
 **Development:**
-- JDK 25 (Eclipse Temurin recommended)
-- Maven 3.9+ (or use `./mvnw` wrapper)
-- Chromium for Playwright: `./mvnw exec:java -Dexec.mainClass=com.microsoft.playwright.CLI -Dexec.args="install chromium"`
-- Optional: MariaDB for `local` profile
-- Optional: `google-credentials.json` for Google Sheets/Calendar integration
+- Java 25 (Eclipse Temurin JDK)
+- Maven 3.8+
+- Docker (optional, for local MariaDB via `docker compose`)
+- Chromium browser (auto-installed by Playwright on first use; cached in CI)
 
 **Production:**
-- Docker with `eclipse-temurin:25-jre` (or standalone Java 25 JRE)
-- MariaDB database
-- Environment variables: `DATABASE_URL`, `DATABASE_USERNAME`, `DATABASE_PASSWORD`
-- Optional: `GOOGLE_CALENDAR_ID`, Google credentials file
-- Chromium (auto-installed in Docker image for Playwright graphics)
+- Java 25 (Eclipse Temurin JRE)
+- MariaDB 11.x (external)
+- Docker (for containerized deployment)
+- Environment variables: `DATABASE_URL`, `DATABASE_USERNAME`, `DATABASE_PASSWORD`, `GOOGLE_CALENDAR_ID`
+
+## Special Considerations
+
+**OSIV (Open Session in View):**
+- `spring.jpa.open-in-view: true` in `application.yml` - Deliberately enabled for Thymeleaf SSR; Hibernate session remains open through the HTTP response so templates can render lazy-loaded associations without explicit fetching
+
+**Static Analysis Gates:**
+- SpotBugs (Medium+HIGH threshold) runs on every `./mvnw verify`; blocking gate in `pom.xml` via `spotbugs-maven-plugin` 4.9.8.3
+- find-sec-bugs 1.14.0 plugin adds Spring Security-aware detection patterns (SSRF, path traversal, injection)
+- Exclusions in `config/spotbugs-exclude.xml`; Lombok-generated methods covered by `lombok.config` `addSuppressFBWarnings=true`
+
+**Code Coverage:**
+- JaCoCo 0.8.14 enforces minimum 82% line coverage across all bundles
+- Excludes: Spring Boot entry point, test-data services, all Graphic/Team Card Playwright-based services
+- Report generated on every `./mvnw verify`; published to GitHub on PRs via `madrapps/jacoco-report`
+
+**Test Routing:**
+- Tag-based via `@Tag` annotation (not filename-based)
+- Surefire: runs tests WITHOUT `@Tag("integration")`, `@Tag("e2e")`, `@Tag("flaky")` (unit tests)
+- Failsafe default-it execution: runs `@Tag("integration")` tests (Spring context ITs, smoke tests)
+- Failsafe e2e execution (enabled via `-Pe2e`): runs `@Tag("e2e")` tests only (Playwright tests)
+- Flaky tests tagged to exclude from standard runs; manually verified before merging
+
+**JEP 498 Workarounds:**
+- Java 25 terminally deprecates `sun.misc.Unsafe`; Surefire/Failsafe/compiler jobs pass `--sun-misc-unsafe-memory-access=allow` to silence Lombok warnings until upstream fix lands
+
+**OpenRewrite Profile:**
+- Activated via `-Prewrite` flag: `./mvnw -Prewrite rewrite:dryRun` (preview) or `rewrite:run` (apply)
+- Whitelist-only recipe activation; `rewrite.yml` enables only `CommonStaticAnalysis` (≈70 sub-recipes)
+- Provides automated cleanup and migration recipes
 
 ---
 
-*Stack analysis: 2026-04-04*
+*Stack analysis: 2026-05-18*
